# havana-data-generator

./: .pre-commit-config.yaml  README.md  pyproject.toml
src/backend/: connect_langfuse.py
src/pydantic_models/: employee.py  project.py
