[project]
name = "havana-data-generator"
version = "0.1.0"
description = ""
authors = [
    {name = "Adrian H.",email = "61416203+mainpyp@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12.4,<4.0"
dependencies = [
    "langfuse (>=3.0.2,<4.0.0)",
    "langchain-openai (>=0.3.23,<0.4.0)",
    "langchain (>=0.3.25,<0.4.0)",
    "openai (>=1.86.0,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "streamlit (>=1.45.1,<2.0.0)",
    "poetry (>=2.1.3,<3.0.0)"
]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
